tests/bad_programs/type_errors/return_int_mul_str.nc
int main() {
    return 2432 * "RRRRRRRRRR";
}
